--- a/condo.ipynb
+++ b/condo.ipynb
@@ -16,14 +16,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import csv\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "pd.set_option('display.max_columns', None)\n",
+    "# pd.set_option('display.max_rows', None)\n",
+    "from functools import reduce\n",
     "\n",
-    "with open('data/ddproperty_1_51.csv') as csvfile:\n",
-    "    csvreader = csv.reader(csvfile)"
+    "def get_data():\n",
+    "    dir_path = 'data/'\n",
+    "    for filename in os.listdir(dir_path):\n",
+    "        if filename.endswith('.csv'):\n",
+    "            with open(os.path.join(dir_path, filename)) as csvfile:\n",
+    "                data = list(csv.reader(csvfile))\n",
+    "            yield data\n",
+    "\n",
+    "\n",
+    "data = list(get_data())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_dataframe(data):\n",
+    "    for j in data:\n",
+    "        yield pd.DataFrame(j[1:], columns = j[0])\n",
+    "\n",
+    "df_list = list(create_dataframe(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = reduce(lambda df1,df2: pd.merge(df1,df2,how ='outer'), df_list)"
    ]
   }
  ],
@@ -45,7 +81,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
