--- a/condo.ipynb
+++ b/condo.ipynb
@@ -280,18 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "price_per_area = used_df['listing-floorarea 2'].str.extract(r'฿(?P<price_per_area>.+)\\s/').replace(',', '', regex = True).astype(float)\n",
-    "area = used_df['listing-floorarea 2'].str.extract(r'\\s/\\s(?P<area>.+)')\n",
-    "price_per_area = pd.merge(price_per_area, area, left_index=True, right_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -315,56 +304,60 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>price_per_area</th>\n",
-       "      <th>area</th>\n",
+       "      <th>price_per_meter_area</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>220000.0</td>\n",
-       "      <td>ตารางเมตร</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>214155.0</td>\n",
-       "      <td>ตารางเมตร</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>73585.0</td>\n",
-       "      <td>ตารางเมตร</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>176211.0</td>\n",
-       "      <td>ตารางเมตร</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>97297.0</td>\n",
-       "      <td>ตารางเมตร</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   price_per_area       area\n",
-       "0        220000.0  ตารางเมตร\n",
-       "1        214155.0  ตารางเมตร\n",
-       "2         73585.0  ตารางเมตร\n",
-       "3        176211.0  ตารางเมตร\n",
-       "4         97297.0  ตารางเมตร"
+       "   price_per_meter_area\n",
+       "0              220000.0\n",
+       "1              214155.0\n",
+       "2               73585.0\n",
+       "3              176211.0\n",
+       "4               97297.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "price_per_area = used_df['listing-floorarea 2'].str.extract(r'฿(?P<price_per_meter_area>.+)\\s/').replace(',', '', regex = True).astype(float)\n",
     "price_per_area.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "used_df = pd.concat([used_df, price_per_area], axis = 1)"
    ]
   },
   {
@@ -372,7 +365,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "used_df.head()"
+   ]
   },
   {
    "cell_type": "code",
