--- a/condo_nocode.ipynb
+++ b/condo_nocode.ipynb
@@ -36,16 +36,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_data():\n",
-    "    dir_path = 'data/'\n",
+    "def get_data(path):\n",
+    "    dir_path = path\n",
     "    for filename in os.listdir(dir_path):\n",
     "        if filename.endswith('.csv'):\n",
     "            with open(os.path.join(dir_path, filename)) as csvfile:\n",
     "                data = list(csv.reader(csvfile))\n",
     "            yield data\n",
     "\n",
+    "def create_dataframe(data):\n",
+    "    for d in data:\n",
+    "        try:\n",
+    "            df = pd.DataFrame(d[1:], columns=d[0])\n",
+    "            yield df\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error creating DataFrame: {e}\")\n",
     "\n",
-    "data = list(get_data())"
+    "\n",
+    "data = get_data('NoCode_data/')\n",
+    "df_list = list(create_dataframe(data))"
    ]
   },
   {
@@ -54,11 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_dataframe(data):\n",
-    "    for j in data:\n",
-    "        yield pd.DataFrame(j[1:], columns = j[0])\n",
-    "\n",
-    "df_list = list(create_dataframe(data))"
+    "df = reduce(lambda df1,df2: pd.merge(df1,df2,how ='outer'), df_list)"
    ]
   },
   {
@@ -67,21 +72,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = reduce(lambda df1,df2: pd.merge(df1,df2,how ='outer'), df_list)"
+    "used_df = df.iloc[:, :14].drop(columns = ['nav-link href', 'nav-link', 'listing-floorarea 2'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "used_df = df.iloc[:, :14].drop(columns = ['nav-link href', 'nav-link'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +86,7 @@
        "9985"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +106,7 @@
        "7985"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +147,6 @@
        "      <th>bed</th>\n",
        "      <th>bath</th>\n",
        "      <th>listing-floorarea</th>\n",
-       "      <th>listing-floorarea 2</th>\n",
        "      <th>listing-features</th>\n",
        "      <th>listing-property-type 2</th>\n",
        "      <th>listing-property-type 3</th>\n",
@@ -168,7 +163,6 @@
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>64 ตร.ม.</td>\n",
-       "      <td>฿220,000 / ตารางเมตร</td>\n",
        "      <td>2 นาที (160 ม.) ถึง N3 BTS อนุสาวรีย์ชัยสมรภูมิ</td>\n",
        "      <td>ขายขาด</td>\n",
        "      <td>ปีที่สร้างเสร็จ: 2018</td>\n",
@@ -183,7 +177,6 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>49 ตร.ม.</td>\n",
-       "      <td>฿214,155 / ตารางเมตร</td>\n",
        "      <td>12 นาที (880 ม.) ถึง E6 BTS ทองหล่อ</td>\n",
        "      <td>ขายขาด</td>\n",
        "      <td>ปีที่สร้างเสร็จ: 2020</td>\n",
@@ -198,7 +191,6 @@
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>53 ตร.ม.</td>\n",
-       "      <td>฿73,585 / ตารางเมตร</td>\n",
        "      <td>2 นาที (170 ม.) ถึง E7 BTS เอกมัย</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -213,7 +205,6 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>57 ตร.ม.</td>\n",
-       "      <td>฿176,211 / ตารางเมตร</td>\n",
        "      <td>7 นาที (540 ม.) ถึง E1 BTS ชิดลม</td>\n",
        "      <td>ขายขาด</td>\n",
        "      <td>ปีที่สร้างเสร็จ: 2009</td>\n",
@@ -228,7 +219,6 @@
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>56 ตร.ม.</td>\n",
-       "      <td>฿97,297 / ตารางเมตร</td>\n",
        "      <td>3 นาที (190 ม.) ถึง G1 BTS กรุงธนบุรี</td>\n",
        "      <td>ขายขาด</td>\n",
        "      <td></td>\n",
@@ -247,12 +237,12 @@
        "3                  23           - ถนนเพชรบุรี, ลุมพินี, ปทุมวัน, กรุงเทพ   \n",
        "4                  23             เจริญนคร, คลองต้นไทร, คลองสาน, กรุงเทพ   \n",
        "\n",
-       "        price bed bath listing-floorarea   listing-floorarea 2  \\\n",
-       "0  13,989,800   2    2          64 ตร.ม.  ฿220,000 / ตารางเมตร   \n",
-       "1  10,500,000   1    1          49 ตร.ม.  ฿214,155 / ตารางเมตร   \n",
-       "2   3,900,000   2    2          53 ตร.ม.   ฿73,585 / ตารางเมตร   \n",
-       "3  10,000,000   1    1          57 ตร.ม.  ฿176,211 / ตารางเมตร   \n",
-       "4   5,400,000   2    1          56 ตร.ม.   ฿97,297 / ตารางเมตร   \n",
+       "        price bed bath listing-floorarea  \\\n",
+       "0  13,989,800   2    2          64 ตร.ม.   \n",
+       "1  10,500,000   1    1          49 ตร.ม.   \n",
+       "2   3,900,000   2    2          53 ตร.ม.   \n",
+       "3  10,000,000   1    1          57 ตร.ม.   \n",
+       "4   5,400,000   2    1          56 ตร.ม.   \n",
        "\n",
        "                                  listing-features listing-property-type 2  \\\n",
        "0  2 นาที (160 ม.) ถึง N3 BTS อนุสาวรีย์ชัยสมรภูมิ                  ขายขาด   \n",
@@ -269,102 +259,11 @@
        "4                              18 ชั่วโมง       กฎชกร เตชะรัตนยืนยง  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "used_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>price_per_meter_area</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>220000.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>214155.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>73585.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>176211.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>97297.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   price_per_meter_area\n",
-       "0              220000.0\n",
-       "1              214155.0\n",
-       "2               73585.0\n",
-       "3              176211.0\n",
-       "4               97297.0"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "price_per_area = used_df['listing-floorarea 2'].str.extract(r'฿(?P<price_per_meter_area>.+)\\s/').replace(',', '', regex = True).astype(float)\n",
-    "price_per_area.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "used_df = pd.concat([used_df, price_per_area], axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "used_df.head()"
    ]
@@ -427,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4,
   "vscode": {
