--- a/condo_selenium.ipynb
+++ b/condo_selenium.ipynb
@@ -2,20 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
     "\n",
-    "def get_page(page_numbers):\n",
-    "    driver = webdriver.Chrome()\n",
-    "    driver.get(\"https://www.ddproperty.com\")\n",
-    "    driver.implicitly_wait(10)\n",
-    "    my_element = driver.find_element_by_id(\"react-aria-4\")\n",
+    "driver = webdriver.Chrome()\n",
+    "driver.get(\"https://www.ddproperty.com/รวมประกาศขาย?/1market=residential&property_type=N&property_type_code[]=CONDO\")\n",
     "\n",
-    "\n",
-    "get_page(1)"
+    "wait = WebDriverWait(driver, 10)\n",
+    "my_element = wait.until(EC.visibility_of_element_located((By.CSS_SELECTOR, \"listing-card listing-id-10755289 listing-card-sale regular-listing\")))\n",
+    "my_element.click()"
    ]
   }
  ],
@@ -35,7 +36,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
