--- a/new_test/test.ipynb
+++ b/new_test/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'สิ่งอำนวยความสะดวก & สถานที่ใกล้เคียง,สิ่งอำนวยความสะดวก,ลานจอดรถ,กล้องวงจรปิด,ห้องเล่นเกมส์,ห้องสมุด,สนามเด็กเล่น,ซาวน่า,รักษาความปลอดภัย 24 ชม.,สปา สระว่ายน้ำ,สนามสควอช,สระว่ายน้ำ,สนามเทนนิส'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[0, \"facility\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,6 +99,382 @@
     "df[\"bathroom\"] = df[\"bathroom\"].astype(float)\n",
     "df[\"space\"] = df[\"space\"].str.extract(r\"([\\d\\.]+[\\d+])\").astype(float)\n",
     "df[\"year\"] = df[\"year\"].str.extract(r\"(\\d{4})\").astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def station(df):\n",
+    "    for i in range(len(df)):\n",
+    "        if isinstance(df['station'][i], float) and np.isnan(df['station'][i]):\n",
+    "            yield np.NaN, np.NaN, np.NaN\n",
+    "        else:\n",
+    "            match = re.search(r'สถานีใกล้เคียง\\d+ นาที \\((\\d+) ม.\\) ถึง (\\w+)\\s(\\w+)\\s[ก-๙]+', str(df['station'][i]))\n",
+    "            yield match.groups() if match else np.nan\n",
+    "\n",
+    "test_df = pd.DataFrame(station(df))\n",
+    "test_df.columns = ['distance (m.)','station_type','station_name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.merge(df, test_df, left_index=True, right_index=True, how=\"left\")\n",
+    "df = df.drop(columns=\"station\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def separate_facilities(df, **kwargs):\n",
+    "    for col_name, keywords in kwargs.items():\n",
+    "        df[col_name] = df[\"facility\"].apply(lambda x: True if isinstance(x, str) and any(keyword in x for keyword in keywords) else False)\n",
+    "    return df\n",
+    "\n",
+    "df = separate_facilities(df, \n",
+    "                            is_Security = ['รักษาความปลอดภัย 24 ชม.','ระบบรักษาความาปลอดภัยการเข้า-ออกอาคาร'],\n",
+    "                            is_Laundry =['ซัก อบ รีด', 'เครื่องซักผ้า'],\n",
+    "                            is_Parking_Lot= ['ที่จอดรถ','ลานจอดรถ','ลานจอดรถใต้ดิน','โรงรถ'],\n",
+    "                            is_Bus_Stop= ['ป้ายรถเมล์'],\n",
+    "                            is_Cleaning=['พนักงานทำความสะอาด'],\n",
+    "                            is_Fitness =['ฟิตเนส','ลู่วิ่ง',],\n",
+    "                            is_Convenient_Store = ['มินิมาร์ท',],\n",
+    "                            is_Balcony=['ระเบียง',],\n",
+    "                            is_View = ['วิวทะเล','วิวสระว่ายน้ำ','วิวเมือง','สวน/วิวสวนธรรมชาติ'],\n",
+    "                            is_Sport_Facility = ['สนามบาส','สนามสควอช','สนามหัดเล่นกอล์ฟ','สนามเด็กเล่น','สนามเทนนิส','สนามแบดมินตัน','ห้องบิลเลียด','ห้องยิมนาสติก'],\n",
+    "                            is_Pool =['สปา สระว่ายน้ำ','สระว่ายน้ำ','สระว่ายน้ำส่วนตัว','สระว่ายน้ำเพื่อความสนุก','สระเด็ก',],\n",
+    "                            is_Park= ['สวนสาธารณะ',],\n",
+    "                            is_Garden = ['สวนส่วนตัว',],\n",
+    "                            is_corner_room = ['ห้องมุม',])\n",
+    "\n",
+    "df = df.drop(columns=\"facility\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ตกแต่งครบ    3161\n",
+       "มีบางส่วน     807\n",
+       "ไม่มี         319\n",
+       "Name: furniture, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"furniture\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4211"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(df[\"floor\"].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>price</th>\n",
+       "      <th>Province</th>\n",
+       "      <th>area (keat)</th>\n",
+       "      <th>district</th>\n",
+       "      <th>bedroom</th>\n",
+       "      <th>bathroom</th>\n",
+       "      <th>space</th>\n",
+       "      <th>year</th>\n",
+       "      <th>type</th>\n",
+       "      <th>furniture</th>\n",
+       "      <th>floor</th>\n",
+       "      <th>distance (m.)</th>\n",
+       "      <th>station_type</th>\n",
+       "      <th>station_name</th>\n",
+       "      <th>is_Security</th>\n",
+       "      <th>is_Laundry</th>\n",
+       "      <th>is_Parking_Lot</th>\n",
+       "      <th>is_Bus_Stop</th>\n",
+       "      <th>is_Cleaning</th>\n",
+       "      <th>is_Fitness</th>\n",
+       "      <th>is_Convenient_Store</th>\n",
+       "      <th>is_Balcony</th>\n",
+       "      <th>is_View</th>\n",
+       "      <th>is_Sport_Facility</th>\n",
+       "      <th>is_Pool</th>\n",
+       "      <th>is_Park</th>\n",
+       "      <th>is_Garden</th>\n",
+       "      <th>is_corner_room</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Supalai Casa Riva : ศุภาลัย คาซา ริวา, กรุงเทพ</td>\n",
+       "      <td>17500000.0</td>\n",
+       "      <td>กรุงเทพ</td>\n",
+       "      <td>บางคอแหลม</td>\n",
+       "      <td>บางคอแหลม</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>240.0</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>ขายขาด</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>720</td>\n",
+       "      <td>B11</td>\n",
+       "      <td>BRT</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Supalai Casa Riva : ศุภาลัย คาซา ริวา, กรุงเทพ</td>\n",
+       "      <td>19000000.0</td>\n",
+       "      <td>กรุงเทพ</td>\n",
+       "      <td>บางคอแหลม</td>\n",
+       "      <td>บางคอแหลม</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>230.0</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>ขายขาด</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>720</td>\n",
+       "      <td>B11</td>\n",
+       "      <td>BRT</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Lumpini Place Rama 3 - Riverview : ลุมพินี เพล...</td>\n",
+       "      <td>2500000.0</td>\n",
+       "      <td>กรุงเทพ</td>\n",
+       "      <td>บางคอแหลม</td>\n",
+       "      <td>บางโคล่</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>150</td>\n",
+       "      <td>B10</td>\n",
+       "      <td>BRT</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Lumpini Place Rama 3 - Riverview : ลุมพินี เพล...</td>\n",
+       "      <td>3100000.0</td>\n",
+       "      <td>กรุงเทพ</td>\n",
+       "      <td>บางคอแหลม</td>\n",
+       "      <td>บางโคล่</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>150</td>\n",
+       "      <td>B10</td>\n",
+       "      <td>BRT</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Lumpini Place Rama 3 - Riverview : ลุมพินี เพล...</td>\n",
+       "      <td>28500000.0</td>\n",
+       "      <td>กรุงเทพ</td>\n",
+       "      <td>บางคอแหลม</td>\n",
+       "      <td>บางโคล่</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>2004.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>150</td>\n",
+       "      <td>B10</td>\n",
+       "      <td>BRT</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                name       price Province  \\\n",
+       "0     Supalai Casa Riva : ศุภาลัย คาซา ริวา, กรุงเทพ  17500000.0  กรุงเทพ   \n",
+       "1     Supalai Casa Riva : ศุภาลัย คาซา ริวา, กรุงเทพ  19000000.0  กรุงเทพ   \n",
+       "2  Lumpini Place Rama 3 - Riverview : ลุมพินี เพล...   2500000.0  กรุงเทพ   \n",
+       "3  Lumpini Place Rama 3 - Riverview : ลุมพินี เพล...   3100000.0  กรุงเทพ   \n",
+       "4  Lumpini Place Rama 3 - Riverview : ลุมพินี เพล...  28500000.0  กรุงเทพ   \n",
+       "\n",
+       "  area (keat)   district  bedroom  bathroom  space    year    type furniture  \\\n",
+       "0   บางคอแหลม  บางคอแหลม      3.0       3.0  240.0  2006.0  ขายขาด       NaN   \n",
+       "1   บางคอแหลม  บางคอแหลม      3.0       3.0  230.0  2006.0  ขายขาด       NaN   \n",
+       "2   บางคอแหลม    บางโคล่      1.0       1.0   39.0  2004.0     NaN       NaN   \n",
+       "3   บางคอแหลม    บางโคล่      1.0       1.0   40.0  2004.0     NaN       NaN   \n",
+       "4   บางคอแหลม    บางโคล่      1.0       1.0   39.0  2004.0     NaN       NaN   \n",
+       "\n",
+       "  floor distance (m.) station_type station_name  is_Security  is_Laundry  \\\n",
+       "0   NaN           720          B11          BRT         True       False   \n",
+       "1   NaN           720          B11          BRT         True       False   \n",
+       "2   NaN           150          B10          BRT         True       False   \n",
+       "3   NaN           150          B10          BRT         True       False   \n",
+       "4   NaN           150          B10          BRT         True       False   \n",
+       "\n",
+       "   is_Parking_Lot  is_Bus_Stop  is_Cleaning  is_Fitness  is_Convenient_Store  \\\n",
+       "0            True        False        False       False                False   \n",
+       "1            True        False        False       False                False   \n",
+       "2            True        False        False       False                False   \n",
+       "3            True        False        False       False                False   \n",
+       "4            True        False        False       False                False   \n",
+       "\n",
+       "   is_Balcony  is_View  is_Sport_Facility  is_Pool  is_Park  is_Garden  \\\n",
+       "0       False    False               True     True    False      False   \n",
+       "1       False    False               True     True    False      False   \n",
+       "2       False    False               True     True    False      False   \n",
+       "3       False    False               True     True    False      False   \n",
+       "4       False    False               True     True    False      False   \n",
+       "\n",
+       "   is_corner_room  \n",
+       "0           False  \n",
+       "1           False  \n",
+       "2           False  \n",
+       "3           False  \n",
+       "4           False  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
