--- a/new_test/test.ipynb
+++ b/new_test/test.ipynb
@@ -103,7 +103,8 @@
     "df[\"bathroom\"] = df[\"bathroom\"].astype(float)\n",
     "df[\"space\"] = df[\"space\"].str.extract(r\"([\\d\\.]+[\\d+])\").astype(float)\n",
     "df[\"year\"] = df[\"year\"].str.extract(r\"(\\d{4})\").astype(float)\n",
-    "df[\"floor\"] = df[\"floor\"].astype(float)"
+    "df[\"floor\"] = df[\"floor\"].astype(float)\n",
+    "df.rename(columns={\"area (keat)\": \"area\", \"Province\": \"province\"}, inplace=True)"
    ]
   },
   {
@@ -129,8 +130,8 @@
     "            yield match.groups() if match else np.nan\n",
     "\n",
     "test_df = pd.DataFrame(station(df))\n",
-    "test_df.columns = ['distance (m.)','station_type','station_name']\n",
-    "test_df[\"distance (m.)\"] = test_df[\"distance (m.)\"].astype(float)\n",
+    "test_df.columns = ['distance','station_type','station_name']\n",
+    "test_df[\"distance\"] = test_df[\"distance\"].astype(float)\n",
     "df = pd.merge(df, test_df, left_index=True, right_index=True, how=\"left\")\n",
     "df = df.drop(columns=\"station\")"
    ]
@@ -194,8 +195,32 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| Column Name   | Explanation                                     |\n",
+    "| ------------- | -------------------------------------------------|\n",
+    "| name          | Name of the property or listing                 |\n",
+    "| price         | Price of the property or listing                |\n",
+    "| province      | Province where the property is located          |\n",
+    "| area  | Area of the property in \"keat\" units            |\n",
+    "| district      | District where the property is located          |\n",
+    "| bedroom       | Number of bedrooms in the property             |\n",
+    "| bathroom      | Number of bathrooms in the property            |\n",
+    "| space         | Space or size of the property                  |\n",
+    "| year          | Year of construction or listing                |\n",
+    "| type          | Type of property (e.g., house, apartment, etc.)|\n",
+    "| furniture     | Information about the furniture in the property|\n",
+    "| floor         | Floor number or level of the property          |\n",
+    "| distance (m.) | Distance to a certain point (e.g., a station) in meters|\n",
+    "| station_type  | Type of nearby station (e.g., MRT, BTS, etc.)    |\n",
+    "| station_name  | Name of the nearby station                      |"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -221,8 +246,8 @@
        "      <th></th>\n",
        "      <th>name</th>\n",
        "      <th>price</th>\n",
-       "      <th>Province</th>\n",
-       "      <th>area (keat)</th>\n",
+       "      <th>province</th>\n",
+       "      <th>area</th>\n",
        "      <th>district</th>\n",
        "      <th>bedroom</th>\n",
        "      <th>bathroom</th>\n",
@@ -231,7 +256,7 @@
        "      <th>type</th>\n",
        "      <th>furniture</th>\n",
        "      <th>floor</th>\n",
-       "      <th>distance (m.)</th>\n",
+       "      <th>distance</th>\n",
        "      <th>station_type</th>\n",
        "      <th>station_name</th>\n",
        "      <th>is_Security</th>\n",
@@ -352,20 +377,20 @@
        "</div>"
       ],
       "text/plain": [
-       "                                                name       price Province  \\\n",
+       "                                                name       price province  \\\n",
        "0     Supalai Casa Riva : ศุภาลัย คาซา ริวา, กรุงเทพ  17500000.0  กรุงเทพ   \n",
        "1     Supalai Casa Riva : ศุภาลัย คาซา ริวา, กรุงเทพ  19000000.0  กรุงเทพ   \n",
        "2  Lumpini Place Rama 3 - Riverview : ลุมพินี เพล...   2500000.0  กรุงเทพ   \n",
        "\n",
-       "  area (keat)   district  bedroom  bathroom  space    year    type furniture  \\\n",
-       "0   บางคอแหลม  บางคอแหลม      3.0       3.0  240.0  2006.0  ขายขาด       NaN   \n",
-       "1   บางคอแหลม  บางคอแหลม      3.0       3.0  230.0  2006.0  ขายขาด       NaN   \n",
-       "2   บางคอแหลม    บางโคล่      1.0       1.0   39.0  2004.0     NaN       NaN   \n",
+       "        area   district  bedroom  bathroom  space    year    type furniture  \\\n",
+       "0  บางคอแหลม  บางคอแหลม      3.0       3.0  240.0  2006.0  ขายขาด       NaN   \n",
+       "1  บางคอแหลม  บางคอแหลม      3.0       3.0  230.0  2006.0  ขายขาด       NaN   \n",
+       "2  บางคอแหลม    บางโคล่      1.0       1.0   39.0  2004.0     NaN       NaN   \n",
        "\n",
-       "   floor  distance (m.) station_type station_name  is_Security  is_Laundry  \\\n",
-       "0    NaN          720.0          B11          BRT         True       False   \n",
-       "1    NaN          720.0          B11          BRT         True       False   \n",
-       "2    NaN          150.0          B10          BRT         True       False   \n",
+       "   floor  distance station_type station_name  is_Security  is_Laundry  \\\n",
+       "0    NaN     720.0          B11          BRT         True       False   \n",
+       "1    NaN     720.0          B11          BRT         True       False   \n",
+       "2    NaN     150.0          B10          BRT         True       False   \n",
        "\n",
        "   is_Parking_Lot  is_Bus_Stop  is_Cleaning  is_Fitness  is_Convenient_Store  \\\n",
        "0            True        False        False       False                False   \n",
@@ -383,7 +408,7 @@
        "2           False  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
